--- a/index.html
+++ b/index.html
@@ -1,5 +1,51 @@
 <!DOCTYPE html>
 <html>
-<h1>Ender Games Studio </h1>
-<h2>Site Under Construction</h2>
+<head>
+
+    <link rel="stylesheet" href="main.css"
+
+</head>
+<body>
+<div class="header">
+    <h2>EnderGames Studio</h2>
+  </div>
+  
+  <div class="row">
+    <div class="leftcolumn">
+      <div class="card">
+        <h2>Welcome To EnderGames Studo</h2>
+        <h5>March 26 2023</h5>
+        <h4>Site is under construction!!!!</h4>
+        <p1>We are hard at work making the site as good as possible!!!</p1>
+
+
+      </div>
+
+    </div>
+    <div class="rightcolumn">
+        
+      <div class="card">
+        <h2>Site Directory</h2>
+        <a href="404.html">Downloads</a>
+        
+
+
+      </div>  
+      <div class="card">
+        <h2>About Me</h2>
+        <p>EnderGames Studio is a new starter studio made by EnderGames himself as 
+            he works to learn how to put out the best in applications and games</p>
+      </div>
+      <div class="card">
+        <h3>Follow Me</h3>
+        <a href="https://www.youtube.com/@endergames98">Youtube</a><br>
+        <a href="https://twitter.com/EnderGamesShow">Twitter</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <h2>© Copyright 2023 EnderGamesStudio </h2>
+  </div>
+</body>
 </html>
