--- a/index.html
+++ b/index.html
@@ -15,37 +15,31 @@
       <div class="card">
         <h2>Welcome To EnderGames Studo</h2>
         <h5>March 26 2023</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Launch of the new site on Github is now live!!!! Check it out</p>
+        <h4>Site is under construction!!!!</h4>
+        <p1>We are hard at work making the site as good as possible!!!</p1>
+
+
       </div>
-      <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
-      </div>
+
     </div>
     <div class="rightcolumn">
+        
+      <div class="card">
+        <h2>Site Directory</h2>
+        <a href="404.html">Downloads</a>
+        
+
+
+      </div>  
       <div class="card">
         <h2>About Me</h2>
-        <div class="fakeimg" style="height:100px;">Image</div>
-        <p>EnderGames Studio is a new starter studio made by EnderGames himself as he works to learn how to put out the best in applications and games</p>
-      </div>
-      <div class="card">
-        <h3>Popular Post</h3>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div>
+        <p>EnderGames Studio is a new starter studio made by EnderGames himself as 
+            he works to learn how to put out the best in applications and games</p>
       </div>
       <div class="card">
         <h3>Follow Me</h3>
-        <p>Some text..</p>
+        <a href="https://www.youtube.com/@endergames98">Youtube</a><br>
+        <a href="https://twitter.com/EnderGamesShow">Twitter</a>
       </div>
     </div>
   </div>
-  
-  <div class="footer">
-    <h2>Footer</h2>
-  </div>
-</body>
-</html>
