--- a/downloads.html
+++ b/downloads.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>EnderGamesStudio</title>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="img/logo.png">
 
