--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta charset="UTF-8" />
   <link rel="stylesheet" href="main.css">
-
+  <title>EnderGamesStudio</title>
   <meta name="description" content="The Homepage for EnderGames Studio">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="EnderGames">
