--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <meta charset="UTF-8" />
+    <title>EnderGamesStudio</title>
     <link rel="stylesheet" href="main.css">
 
 </head>
