--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="The Homepage for EnderGames Studio">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="EnderGames">
+  <link rel="icon" type="image/png" href="img/logo.png">
 
 </head>
 <body>
