--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,7 @@
         <h3>Follow Me</h3>
         <a href="https://www.youtube.com/@endergames98">Youtube</a><br>
         <a href="https://twitter.com/EnderGamesShow">Twitter</a>
+        <a href="https://github.com/EnderGamesStudio">GitHub</a>
       </div>
 
       <div class="card">
