--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         
     <div class="card">
       <h2>Site Directory</h2>
-      <a href="downloads.html">Downloads</a>
+      <a href="downloads.html">Downloads</a><br>
+      <a href="blog.html">Blog Site</a>
         
       </div>  
 
@@ -58,7 +59,7 @@
       <div class="card">
         <h3>Follow Me</h3>
         <a href="https://www.youtube.com/@endergames98">Youtube</a><br>
-        <a href="https://twitter.com/EnderGamesShow">Twitter</a>
+        <a href="https://twitter.com/EnderGamesShow">Twitter</a><br>
         <a href="https://github.com/EnderGamesStudio">GitHub</a>
       </div>
 
