--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <div class="card">
         <h1>Latest News</h1>
         <h5></h5>
-        <h3>- Added Blogs and more stlye to the page</h3>
+        <h3>- Added Blogs and more style to the page</h3>
+        <h3>- Updated Socials</h3>
 
 
 
@@ -68,7 +69,7 @@
   </div>
 
   <div class="footer">
-    <h5>©2023 EnderGamesStudio (All Rights Reserved)</h5>
+    <h5>©2023 EnderGamesStudio (All Rights Reserved)  </h5>
   </div>
       
    
