--- a/blog.html
+++ b/blog.html
@@ -20,11 +20,19 @@
     <div class="leftcolumn">
       <div class="card">
         <h2>Welcome To EnderGames Studo!</h2>
-        <h5>March 26 2023</h5>
+        <h5>March 26 2023---By:Webmaster</h5>
         <h4>Site is under construction!!!!</h4>
         <p>We are hard at work making the site as good as possible!!!</p>
         <p>Let us know what you think</p><br>
         <a href="Posts/3-27-23-post1.html" class="button2">Read More</a>
+      </div>
+
+      <div class="card">
+        <h2>Who Am I?</h2>
+        <h5>March 27 2023--By:EnderGames</h5>
+        <h4>Learn about EnderGames and who he is</h4>
+
+        <a href="Posts/3-27-23-whoami.html" class="button2">Read More</a>
       </div>
 
     </div>
@@ -42,7 +50,8 @@
 
       <div class="card">
         <h3>Latest Post:</h3>
-        <p>Welcome to the site</p>
+        <p>-Welcome to the site</p>
+        <p>-Who am i?</p>
 
 
       </div>
