--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,7 @@
 
       <div class="card">
         <h3>Latest Post:</h3>
+        <p>-Rune Voice Assistant</p>
         <p>-Who am i?</p>
         <p>-Welcome to the site</p>
         
