--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,19 @@
     <div class="leftcolumn">
       
       <div class="card">
+        <h2>Rune Voice Assistant</h2>
+        <h5>March 29 2023--By:EnderGames</h5>
+        <h4>My own personal Jarvis like voice assistant</h4>
+        <p>Coded in python by EnderGames</p><br>
+
+        <a href="Posts/3-29-23-Rune.html" class="button2">Read More</a>
+      </div>
+
+
+
+
+
+      <div class="card">
         <h2>Who Am I?</h2>
         <h5>March 27 2023--By:EnderGames</h5>
         <h4>Learn about EnderGames and who he is</h4>
