--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="main.css">
-  <title>EnderGamesStudio</title>
+  <title>StarVoid Studios</title>
   <meta name="description" content="The Homepage for EnderGames Studio">
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="EnderGames">
@@ -13,7 +13,7 @@
 <body>
 <div class="header">
     <img class="img" src="img/Logo.png"> 
-    <h2>EnderGames Studio</h2>
+    <h2>StarVoid Studio</h2>
     <a href="downloads.html" class="button">DOWNLOADS</a>
     <a href="blog.html" class="button">BLOG</a>
   </div>
@@ -52,7 +52,7 @@
 
     <div class="card">
         <h2>About Me</h2>
-        <p>EnderGames Studio is a new starter studio made by EnderGames himself as 
+        <p>StarVoid Studio is a new starter studio made by EnderGames himself as 
             he works to learn how to put out the best in applications and games</p>
     </div>
 
