--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1>Ender Games Studio </h1>
+<h1>StarVoid Studios </h1>
 <h2>ERROR 404: PAGE NOT FOUND</h2>
 <p>Dont Panic!!! This page either dosent exist or we are still working on it!!</p>
 <p>In the mean time why dont ya head back to the homepage</p>
