--- a/downloads.html
+++ b/downloads.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>EnderGamesStudio</title>
+    <title>StarVoid Studios</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="img/logo.png">
@@ -11,7 +11,7 @@
 <body>
 <div class="header">
     <img class="img" src="img/Logo.png"> 
-    <h2>EnderGames Studio</h2>
+    <h2>StarVoid Studios</h2>
     <a href="index.html" class="button">HOME</a>
     <a href="blog.html" class="button">BLOG</a>
 
