--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="leftcolumn">
       <div class="card">
-        <h2>Welcome To EnderGames Studo!</h2>
+        <h2>Welcome To StarVoid Studios!</h2>
         <h5></h5>
         <h4>Site is under construction!!!!</h4>
         <p1>We are hard at work making the site as good as possible!!!</p1>
