--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 <body>
 <div class="header">
     <img class="img" src="img/Logo.png"> 
-    <h2 class="title">StarVoid Studios</h2>
+    <h1 class="title">StarVoid Studios</h1>
     <a href="index.html" class="button">HOME</a>
     <a href="downloads.html" class="button">DOWNLOADS</a>
     
@@ -53,15 +53,15 @@
     </div>
   <div class="rightcolumn">
         
- 
 
-
-      <div class="card">
-        <h3>Follow Me</h3>
-        <a href="https://www.youtube.com/@endergames98">Youtube</a><br>
-        <a href="https://twitter.com/EnderGamesShow">Twitter</a><br>
-        <a href="https://github.com/EnderGamesStudio">GitHub</a>
-      </div>
+    <div class="card">
+      <h3>Follow Us</h3>
+      <a href="https://www.youtube.com/@endergames98"class="button2">Youtube @EnderGames98</a><br>
+      <br>
+      <a href="https://twitter.com/StarVoidStudios"class="button2">Twitter @StarVoidStudios</a><br>
+      <br>
+      <a href="https://github.com/StarVoidStudios" class="button2">GitHub @StarVoidStudios</a>
+    </div>
 
       <div class="card">
         <h3>Latest Post:</h3>
